--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,139 @@
 .App {
+  margin: 20px auto;
+  width: 1000px;
+  height: 700px;
+  border: 4px solid black;
+}
+
+.Header {
+  padding: 0px;
+  background-color: #783F04;
+  color: white;
+  border-bottom: 4px solid black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 50px;
+}
+
+.Header h1 {
+  width: 500px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header div {
+  width: 250px;
+  text-align: right;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Header button {
+  margin-right: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Body {
+  background-color: #FF9900;
+  color: black;
+  height: 646px;
+}
+
+#CrewBoardBody {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  overflow-y: scroll;
+}
+
+.CrewBoardDetailContainer {
+  width: 800px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: white;
+  color: black;
+  border: 4px solid black;
+  display: flex;
+}
+
+.CrewBoardDetailContents {
+  text-align: center;
+  width: 100%
+}
+
+.CrewBoardDetailContents h2 {
+  margin-top: 5px;
+}
+
+.CrewBoardDetailButtons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#DetailBody {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start
+}
+
+#DetailLeft {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#DetailRight {
+  background-color: white;
+  border: 4px solid black;
+  width: 300px;
+  margin-top: 20px
+}
+
+#DetailRight h2 {
+  margin-top: 0px;
+}
+
+#DetailRight table {
+  margin: 5px auto;
+  width: 75%;
+}
+
+.AddLeft {
+  float: left;
+  width: 40%;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+.AddRight {
+  float: right;
+  width: 40%;
+  margin-top: 20px;
+}
+
+.AddRow {
+  margin-bottom: 30px;
+}
+
+.NormalButton {
+  padding: 5px 20px;
+  background-color: #085394;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.DeleteButton {
+  padding: 5px 20px;
+  background-color: #CF2A27;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Error {
+  color: red;
+  font-weight: bold;
+}
+
+.CrewBoardDetailImage {
+  width: 100px;
+}
+
+#DetailImage {
+  width: 300px;
+  border: 4px solid black;
 }
